:lipstick: Added fonts and fixed overflow issue

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-}
 @mixin flex-center {
   display: flex;
   justify-content: center;
@@ -9,5 +5,6 @@
 }
 
 body {
-  background-color: #000;
+  box-sizing: border-box;
+  margin: 0;
 }
